<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.inspur.tax.roboat.home.HomeViewModel" />
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.Guideline
            android:id="@+id/verticalGuideLine1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />
        <android.support.constraint.Guideline
            android:id="@+id/verticalGuideLine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />
        <android.support.constraint.Guideline
            android:id="@+id/verticalGuideLine3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65" />
        <android.support.constraint.Guideline
            android:id="@+id/verticalGuideLine4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <android.support.constraint.Guideline
            android:id="@+id/horizontalGuideLine1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />
        <android.support.constraint.Guideline
            android:id="@+id/horizontalGuideLine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />
        <android.support.constraint.Guideline
            android:id="@+id/horizontalGuideLine3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />
        <android.support.constraint.Guideline
            android:id="@+id/horizontalGuideLine4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="@id/horizontalGuideLine1"
            app:layout_constraintBottom_toBottomOf="@id/horizontalGuideLine2"
            app:layout_constraintStart_toStartOf="@id/verticalGuideLine1"
            app:layout_constraintEnd_toEndOf="@id/verticalGuideLine2"
            app:cardBackgroundColor="#0693CD"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/swdj"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/gallery_swdj"
                android:textColor="@android:color/white"
                android:textSize="72sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="@id/horizontalGuideLine1"
            app:layout_constraintBottom_toBottomOf="@id/horizontalGuideLine2"
            app:layout_constraintStart_toStartOf="@id/verticalGuideLine2"
            app:layout_constraintEnd_toEndOf="@id/verticalGuideLine3"
            app:cardBackgroundColor="#0693CD"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/swrd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/gallery_swrd"
                android:textColor="@android:color/white"
                android:textSize="72sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="@id/horizontalGuideLine1"
            app:layout_constraintBottom_toBottomOf="@id/horizontalGuideLine2"
            app:layout_constraintStart_toStartOf="@id/verticalGuideLine3"
            app:layout_constraintEnd_toEndOf="@id/verticalGuideLine4"
            app:cardBackgroundColor="#0693CD"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/fpbl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/gallery_fpbl"
                android:textColor="@android:color/white"
                android:textSize="72sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="@id/horizontalGuideLine2"
            app:layout_constraintBottom_toBottomOf="@id/horizontalGuideLine3"
            app:layout_constraintStart_toStartOf="@id/verticalGuideLine1"
            app:layout_constraintEnd_toEndOf="@id/verticalGuideLine2"
            app:cardBackgroundColor="#0693CD"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/sbns"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/gallery_sbns"
                android:textColor="@android:color/white"
                android:textSize="72sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="@id/horizontalGuideLine2"
            app:layout_constraintBottom_toBottomOf="@id/horizontalGuideLine3"
            app:layout_constraintStart_toStartOf="@id/verticalGuideLine2"
            app:layout_constraintEnd_toEndOf="@id/verticalGuideLine3"
            app:cardBackgroundColor="#0693CD"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/yhbl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/gallery_yhbl"
                android:textColor="@android:color/white"
                android:textSize="72sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="@id/horizontalGuideLine2"
            app:layout_constraintBottom_toBottomOf="@id/horizontalGuideLine3"
            app:layout_constraintStart_toStartOf="@id/verticalGuideLine3"
            app:layout_constraintEnd_toEndOf="@id/verticalGuideLine4"
            app:cardBackgroundColor="#0693CD"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/zmbl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/gallery_zmbl"
                android:textColor="@android:color/white"
                android:textSize="72sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="@id/horizontalGuideLine3"
            app:layout_constraintBottom_toBottomOf="@id/horizontalGuideLine4"
            app:layout_constraintStart_toStartOf="@id/verticalGuideLine1"
            app:layout_constraintEnd_toEndOf="@id/verticalGuideLine2"
            app:cardBackgroundColor="#0693CD"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/xczx"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/gallery_xczx"
                android:textColor="@android:color/white"
                android:textSize="72sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="@id/horizontalGuideLine3"
            app:layout_constraintBottom_toBottomOf="@id/horizontalGuideLine4"
            app:layout_constraintStart_toStartOf="@id/verticalGuideLine2"
            app:layout_constraintEnd_toEndOf="@id/verticalGuideLine3"
            app:cardBackgroundColor="#0693CD"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/qywh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/gallery_qywh"
                android:textColor="@android:color/white"
                android:textSize="72sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="@id/horizontalGuideLine3"
            app:layout_constraintBottom_toBottomOf="@id/horizontalGuideLine4"
            app:layout_constraintStart_toStartOf="@id/verticalGuideLine3"
            app:layout_constraintEnd_toEndOf="@id/verticalGuideLine4"
            app:cardBackgroundColor="#0693CD"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/bsfw"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/gallery_bsfw"
                android:textColor="@android:color/white"
                android:textSize="72sp" />
        </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>
</layout>